apps/cilium/hubble-ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: "cilium"
  rules:
    - host: hubble.g2net.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
  tls:
    - hosts:
        - hubble.g2net.xyz
      secretName: hubble-ui-cert
